Fixed the menus visualization on mobile

--- a/app/pasti/page.module.scss
+++ b/app/pasti/page.module.scss
@@ -96,3 +96,17 @@
         }
     }
 }
+
+@media (max-width: 550px) {
+    .dbContainer {
+        .downloadButton {
+            width: 100%;
+        }
+    }
+    .previewContainer {
+        .documentPreview {
+            width: 300px;
+            height: 118px;
+        }
+    }
+}
